# GRAMS

./: CMakeLists.txt  G4_ParticleIDs.csv  README.md  Toy_model_info.txt  geant4-10.7.1.tar.gz.REMOVED.git-id  output  user.properties
GRAMS_2021/: G4Data0.heprep  G4Data1.heprep  G4Data10.heprep  G4Data2.heprep  G4Data3.heprep  G4Data4.heprep  G4Data5.heprep  G4Data6.heprep  G4Data7.heprep  G4Data8.heprep  G4Data9.heprep  GRAMS.cc  Gamma_0.1MeV_0deg_geometry.txt  NoS.txt  user.properties
GRAMS_2021/include/: GRAMSDetectorHit.hh  GRAMSRunAction.hh
GRAMS_2021/macro/: GRASP_tmp.mac  Gamma_old.mac  Old_Design_anti_He3.mac  Old_Design_anti_proton.mac  anti_He3_TOF.mac  anti_He3_vis.mac  edep.mac  test.mac  vis.mac
Original_2021/: .DAWN_1.default  G4Data0.heprep  G4Data1.heprep  G4Data1.heprep.REMOVED.git-id  G4Data10.heprep  G4Data2.heprep  G4Data3.heprep  G4Data4.heprep  G4Data4.heprep.REMOVED.git-id  G4Data5.heprep  G4Data6.heprep  G4Data7.heprep  G4Data8.heprep  G4Data9.heprep  Original.cc  README.txt  user.properties
Toy_model/: CMakeLists.txt
include/: GRAMSDetectorConstruction.hh  GRAMSDetectorMessenger.hh  GRAMSDetectorSD.hh  GRAMSPhysicsList.hh  global.h
input/: test.txt
macro/: 230718_Daughter.mac  Annihilation.mac  GRASP.mac  GRASP_JC.mac  Gamma_90.mac  Gamma_tmp.mac  LITv2_Stop_anti_deuteron_1e8_Ene_0_600.mac  New_Design_No_button_anti_He3.mac  New_Design_No_button_anti_deuteron.mac  New_Design_No_button_anti_proton.mac  antideuteron.mac  eBeam.mac  vis.mac  workshop.mac
reference/: MacOS_setup
sensitivity/: GRASP.ipynb  Sensitivity.ipynb  anti_He3_analysis.ipynb  anti_proton_analysis.ipynb  plot_TOF_0.html  plot_TOF_0.ipynb  plot_TOF_0_10percent_cut_and.html  plot_TOF_0_10percent_cut_notand.html  plot_TOF_0_30percent.html  plot_TOF_0_30percent_cut_and.html  plot_TOF_0_30percent_cut_notand.html  plot_TOF_3D.ipynb  plot_TOF_45.html  plot_TOF_45.ipynb  plot_TOF_45_10percent_cut_notand.html  plot_TOF_45_30percent_cut_notand.html  read_TOF.html  split_large_file.ipynb
simple_model/: .DAWN_1.history  CMakeLists.txt  Original.cc  user.properties
src/: GRAMSDetectorConstruction.cc  GRAMSDetectorHit.cc  GRAMSDetectorMessenger.cc  GRAMSDetectorSD.cc  GRAMSEventAction.cc  GRAMSPhysicsList.cc  GRAMSPrimaryGeneratorAction.cc  GRAMSRunAction.cc
stats/: 210824_corner_plot.html  210920_TOF.html  210923_TOF.html  Cylindrical_design.ipynb  LArTPC_design_histogram.ipynb  LarTPC_Penatration_Depth_Plot.ipynb  LarTPC_Penatration_Depth_Read.ipynb  LarTPC_Penatration_Depth_Read_sideinfo.html  Paper_Cut.ipynb  TOF.ipynb  TOF_paddle_stats.ipynb  attach_data.ipynb  charged_secondary_angle.ipynb  corner_plot.ipynb  cornerplot.py  count number of events.ipynb  multiplicity_gaussian.ipynb  statistics.ipynb  statistics_anti_deuteron-Copy1.ipynb  statistics_anti_proton.ipynb  stats.ipynb  stats_normal_particle.ipynb  stats_normal_particle.py  test.ipynb  test.py
(+424 files in other folders)
